# ya-ya

./: .env  .gitignore  Cargo.toml  README.md  background.mjs  manifest.json  package.json  spec.yaml  style.css
action/: index.html  index.mjs
content/: scripts.mjs  styles.css
functions/: Pipfile  db_conn.py  prompts.toml  record.py  records.yql  requirements.txt  text.py  translate_word.go  word.py
options/: index.html  index.mjs
wasm/background/: Cargo.toml
wasm/common/: Cargo.toml  build.rs
wasm/common/src/: annotation.rs  env.rs  error.rs  lib.rs  loading.rs
wasm/front/: Cargo.toml  build.rs
wasm/front/src/: app.rs  env.rs  lib.rs
wasm/front/src/app/: annotation.rs  loading.rs  mark.rs  popover.rs  text.rs  util.rs  word.rs  ya_text.rs  ya_word.rs
wasm/options/: Cargo.toml
wasm/options/src/: app.rs
wasm/popup/: Cargo.toml
wasm/popup/src/: app.rs  lib.js  lib.rs
