[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
js-sys = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
json = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
dotenv = { workspace = true }
