[package]
name = "ya-ya-front"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "CaretPosition",
    "EventTarget",
    "PointerEvent",
    "Selection",
    "DomRect",
    "Range",
    "NodeFilter",
    "NodeIterator",
] }
wasm-bindgen = { workspace = true }
leptos = { version = "0.6", features = ["csr"] }
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
leptos-use = { version = "0.13.8" }
js-sys = "0.3.72"
uuid = { version = "1.11.0", features = ["v4"] }
markdown = "1.0.0-alpha.21"
wasm-bindgen-futures = "0.4.45"
cfg-if = { workspace = true }
reqwest = { version = "0.12.9", features = ["json"] }
json = "0.12.4"
serde = "1.0.215"
serde_json = "1.0.133"
thiserror = "2.0.3"

[build-dependencies]
dotenv = "0.15.0"
