[package]
name = "ya-ya-front"
version = { workspace = true }
edition = { workspace = true }
resolver = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { workspace = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "CaretPosition",
    "EventTarget",
    "PointerEvent",
    "Selection",
    "DomRect",
    "Range",
    "NodeFilter",
    "NodeIterator",
] }
wasm-bindgen = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
console_log = { workspace = true }
log = { workspace = true }
console_error_panic_hook = { workspace = true }
leptos-use = { workspace = true }
js-sys = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
markdown = { workspace = true }
wasm-bindgen-futures = { workspace = true }
cfg-if = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
json = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
unicode_segmentation = { workspace = true }
common = { path = "../common" }
