[package]
name = "ya-ya-options"
version.workspace = true
edition.workspace = true
resolver = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = "0.2"
log = "0.4"
console_error_panic_hook = "0.1.7"
wasm-bindgen = { workspace = true }
leptos = { version = "0.6", features = ["csr"] }
