[package]
name = "ya-ya-options"
version.workspace = true
edition.workspace = true
resolver = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
console_log = { workspace = true }
log = { workspace = true }
console_error_panic_hook = { workspace = true }
wasm-bindgen = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
